--- a/Mode création produit.html
+++ b/Mode création produit.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <title>Mode création produit</title>
 </head>
 <body>
-
+    <div>
+        <button>Champ de recherche et tri</button>
+        <button>ANNULER</button>
+        <button>VALIDER</button>
+    </div>
 </body>
 </html>
