--- a/HTML/Mode création produit.html
+++ b/HTML/Mode création produit.html
@@ -6,19 +6,80 @@
     <link rel="stylesheet" type="text/css" href="CSS/Mode création produit (css).css">
 </head>
 <body>
-        <div>
-            <button>Champ de recherche et tri</button>
-            <button>ANNULER</button>
-            <button>VALIDER</button>
+        <div class="page" id="page1">
+            <div class="div_bouton">
+                <form class="d-flex">
+                    <input class="form-control me-2" type="search" placeholder="RECHERCHE" aria-label="RECHERCHE">
+                    <button type="submit">RECHERCHER</button>
+                </form>
+                <button onclick="window.location.href = 'Version main page.html';">ANNULER</button>
+                <button onclick="window.location.href = 'Version main page.html'">VALIDER</button>
+            </div>
+            <div>
+                <table id="infos">
+                    <tr>
+                        <td>TVA</td>
+                        <td>Code Produit</td>
+                        <td>Prix TTC</td>
+                        <td>Prix HT</td>
+                    </tr>
+                    <tr>
+                        <td>Nom du Produit</td>
+                        <td>Catégorie</td>
+                        <td>Prix Unitaire</td>
+                        <td>Unité du Produit</td>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <table id="crea_prdt">
+                    <caption>Création produit</caption>
+                    <thead>
+                        <tr>
+                            <th>Code</th>
+                            <th>Libellé</th>
+                            <th>Unité</th>
+                            <th>PrixUnitaire</th>
+                            <th>Allèrgène</th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
+            <div>
+                <table id="liste_prdt">
+                    <caption>Liste de tous les produits dans la mercuriale</caption>
+                    <thead>
+                    <tr>
+                        <th>Code</th>
+                        <th>Libellé</th>
+                        <th>Unité</th>
+                        <th>PrixUnitaire</th>
+                        <th>Allèrgène</th>
+                        <th>Colonne6</th>
+                        <th>Colonne7</th>
+                        <th>Colonne8</th>
+                    </tr>
+                    </thead>
+                </table>
+            </div>
+            <div>
+                <button class="imp">Imprimer Mercuriale</button>
+            </div>
         </div>
-        <div>
-           <form>
 
-           </form>
-        </div>
-        <div>
 
+        <div class="page" id="page2">
+            <div class="div_bouton">
+                <button disabled>SUPPRIMER</button>
+                <button disabled>EDITER</button>
+                <button>CREER</button>
+            </div>
+
+            <div>
+                <button class="imp" disabled>Imprimer Fiche Technique</button>
+            </div>
         </div>
+
 
 </body>
 </html>
