Page création ajoutée et lien entre les pages

--- a/Main fiche technique.html
+++ b/Main fiche technique.html
@@ -11,8 +11,8 @@
 </div>
 <div class="boutons">
     <button disabled>SUPPRIMER</button>
-    <button disabled class="Editer" onclick="window.location.href = 'Page affichage fiche technique.html';">EDITER</button>
-    <button class="Créer" onclick="window.location.href = 'Page création fiche technique';">CREER</button>
+    <button disabled class="Editer" onclick="window.location.href = 'Page éditer fiche technique.html';">EDITER</button>
+    <button class="Créer" onclick="window.location.href = 'Page création fiche technique.html';">CREER</button>
 </div>
 <div class="Progression" style="width: 600px;  padding-top:10px; padding-bottom:10px;border: 2px solid gray; text-align: center;background: #ffffff;"> Progression</div>
 <div class="Description" style="width: 600px;  padding-top:10px; padding-bottom:10px;border: 2px solid gray; text-align: center;background: #ffffff;"> Description des ingrédients</div>
