--- a/Page éditer fiche technique.html
+++ b/Page éditer fiche technique.html
@@ -11,7 +11,7 @@
 <div class="boutons">
     <button>SUPPRIMER</button>
     <button class="Valider" onclick="window.location.href = 'Page affichage fiche technique.html';">VALIDER</button>
-    <button class="Annuler" onclick="window.location.href = 'Page création fiche technique';">ANNULER</button>
+    <button class="Annuler" onclick="window.location.href = 'Page affichage fiche technique.html';">ANNULER</button>
 </div>
 <input class="Progression" placeholder="Progression" type="text" id="Progression" name="Progression" required
        minlength="4" maxlength="8" size="70">
