Crea prdt et main page front

--- a/Page création fiche technique.html
+++ b/Page création fiche technique.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Page création fiche technique</title>
-    <link rel="stylesheet" type="text/css" href="Page affichage fiche technique.css">
+    <link rel="stylesheet" type="text/css" href="HTML/CSS/Page%20affichage%20fiche%20technique.css">
 </head>
 <body>
 <input class="NomFT" placeholder="Nom de la fiche technique" type="text" id="NomFT" name="NomFT" required
        minlength="4" maxlength="8" size="30">
 <div class="boutons">
-    <button class="Valider" onclick="window.location.href = 'Page affichage fiche technique.html';">VALIDER</button>
-    <button class="Annuler" onclick="window.location.href = 'Page affichage fiche technique.html';">ANNULER</button>
+    <button class="Valider" onclick="window.location.href = 'HTML/Page affichage fiche technique.html';">VALIDER</button>
+    <button class="Annuler" onclick="window.location.href = 'HTML/Page affichage fiche technique.html';">ANNULER</button>
 </div>
 <input class="Progression" placeholder="Progression" type="text" id="Progression" name="Progression" required
        minlength="4" maxlength="8" size="70">
