Réarrangement de la branche

--- a/HTML/Main fiche technique.html
+++ b/HTML/Main fiche technique.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Main fiche technique</title>
-    <link rel="stylesheet" type="text/css" href="Page%20affichage%20fiche%20technique.css">
+    <link rel="stylesheet" type="text/css" href="../Page%20affichage%20fiche%20technique.css">
 </head>
 <body>
 <div>
