--- a/HTML/Page création fiche technique.html
+++ b/HTML/Page création fiche technique.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Page création fiche technique</title>
-    <link rel="stylesheet" type="text/css" href="Page affichage fiche technique.css">
+    <link rel="stylesheet" type="text/css" href="../Page%20affichage%20fiche%20technique.css">
 </head>
 <body>
 <input class="NomFT" placeholder="Nom de la fiche technique" type="text" id="NomFT" name="NomFT" required
