--- a/HTML/Page affichage fiche technique.html
+++ b/HTML/Page affichage fiche technique.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Page affichage fiche technique</title>
-    <link rel="stylesheet" type="text/css" href="Page affichage fiche technique.css">
+    <link rel="stylesheet" type="text/css" href="../Page%20affichage%20fiche%20technique.css">
 </head>
 <body>
 <div class="NbCouverts">
