--- a/HTML/Mode_creation_produit.html
+++ b/HTML/Mode_creation_produit.html
@@ -13,7 +13,7 @@
                 <button type="submit" aria-label="Bouton de recherche">RECHERCHER</button>
             </form>
             <div class="boutons">
-                <button onclick="window.location.href = 'Version_main_page.html';" aria-label="Bouton d'annulation">ANNULER</button>
+                <button onclick="window.location.href = 'Version_main_page.html'" aria-label="Bouton d'annulation">ANNULER</button>
                 <button onclick="window.location.href = 'Version_main_page.html'" aria-label="Bouton de validation">VALIDER</button>
             </div>
         </div>
